Mon Feb  9 17:54:53 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, node/n-mode-group-by.rb, share/hash-*.rb:
	  HashGenerator -> HValueGenerator: 名前が良くないので改名
	* job/equijoin.rb: equijoinとequijoin2の出力結果を合わせた

Mon Feb  9 17:34:14 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* filtering 要素: deep-copy化
	  + backend/bhere.rb
	  + node/port.rb
	  + test/testc.rb
	  + merge_group_by: 未対応

Fri Feb  6 17:41:09 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* job/cat.rb, backend/cat.rb: cat API 追加
	* job/equijoin.rb: equijoin2追加
	* job/each-substream-mapper.rb: mapf API 追加

Mon Feb  2 18:15:39 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, node.rb, share/*.rb: magic comment 追加忘れ
	* share/conf.rb: svnからの移行忘れ

Mon Feb  2 17:57:27 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* *.rb, */*.rb: magic comment 追加

Fri Jan 30 18:08:20 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* equijoin: 完成
	* join: by_key: ruby1.9対応
	* share/hash-*: 追加

Wed Jan 14 14:13:56 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* join: 作成

Wed Dec 17 18:25:59 2008  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* Fairy::def_filter: 追加

Wed Dec 17 17:50:59 2008  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-local-file-output: requireモジュール変更
	* BInputtable#create_nodes: ruby1.8.* 対応
	* share/conf.rb: デフォルト fairy.conf パス変更

	* job/junction.rb: sub(junction) API変更

Fri Dec 12 18:18:44 2008  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* conf.rb, contoroller.rb: CONF.PROCESS_LIFE_MANAGE_INTERVAL 追加
	* log.rb: @the_logがすでにあるときは生成しない
	* Fairy.create_subfairy: 追加

	* sub: 完成
	  + junction.rb, b-junction.rb: 追加
	  + Fairy#initialize_subfairy: 追加

Tue Dec  9 20:14:34 2008  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* NDirectProduct::NPostFilter#start: 最適化した

Tue Dec  9 18:05:56 2008  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* node/port.rb, share/conf.rb: 待ちになったとき表示用のデバックオ
	  プション追加
	* NJob#start: 例外発生時にバックトレースログを吐き出す