@@ -19,7 +19,8 @@ module Fairy
   CONF.PROCESSOR_BIN = CONF.BIN+"/processor"
 
   CONF.N_MOD_GROUP_BY = 5
-  CONF.HASH_MODULE = "share/hash-murmur"
+  CONF.HASH_MODULE = "share/hash-md5"
+  CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:policy => :OnMemoryBuffer}
 
   CONF.VF_ROOT = CONF.HOME+"/test/Repos"
   CONF.VF_PREFIX = `hostname`.chomp
