@@ -15,6 +15,7 @@ module Fairy
       mod = CONF.HASH_MODULE
       require mod
       @hash_generator = Fairy::HValueGenerator.new(bjob.hash_seed)
+
     end
 
     def key(e)
@@ -27,19 +28,23 @@ module Fairy
       def initialize(processor, bjob, opts, block_source)
 	super
 	@block_source = block_source
+
+	@buffering_policy = @opts[:buffering_policy]
+	@buffering_policy ||= CONF.MOD_GROUP_BY_BUFFERING_POLICY
+
       end
 
       def start
 	super do
-	  @key_value = {}
+	  @key_value_buffer = 
+	    eval("#{@buffering_policy[:policy]}").new(@buffering_policy)
 	  @hash_proc = BBlock.new(@block_source, @context, self)
 
 	  @import.each do |e|
 	    key = key(e)
-	    @key_value[key] = [] unless @key_value.key?(key)
-	    @key_value[key].push e
+	    @key_value_buffer.push(key, e)
 	  end
-	  for key, values in @key_value
+	  @key_value_buffer.each do |key, values|
 	    #Log::debug(self, key)
 	    @export.push [key, values]
 	  end
@@ -51,21 +56,20 @@ module Fairy
       end
     end
 
-#   class NPostAfterModFilter<NSingleExportFilter
-#     Processor.def_export self
+    class OnMemoryBuffer
+      def initialize(policy)
+	@key_value = {}
+      end
 
-#     def initialize(processor, bjob, opts, block_source)
-#       super
-#       @block_source = block_source
-#     end
+      def push(key, value)
+	@key_value[key] = [] unless @key_value.key?(key)
+	@key_value[key].push value
+      end
 
-#     def start
-#       super do
-# 	@import.each{|e| @export.push e}
-#       end
-#     end
-
-#   end
+      def each(&block)
+	@key_value.each &block
+      end
+    end
 
   end
 end
